Added balance api.
