# server/src/main/java/com/potrt/stats/entities/Balance.java
@@ -1,0 +1,16 @@
+/* Copywrite (c) 2024 */
+package com.potrt.stats.entities;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@NoArgsConstructor
+@AllArgsConstructor
+@Getter
+@Setter
+public class Balance {
+  private Integer total;
+  private Integer membered;
+}
